# komodo

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kateproject.build  .kde-ci.yml  CMakeLists.txt  DOCUMENTATION.md  Messages.sh  README.md  org.kde.komodo.desktop  org.kde.komodo.metainfo.xml  org.kde.todoapp.desktop  snapcraft.yaml  todo.txt
doc/: CMakeLists.txt
doc/komodo/: CMakeLists.txt  index.docbook
po/ar/: komodo.po
po/ca/: komodo.po
po/ca@valencia/: komodo.po
po/cs/: komodo.po
po/de/: komodo.po
po/es/: komodo.po
po/eu/: komodo.po
po/fi/: komodo.po
po/fr/: komodo.po
po/ga/: komodo.po
po/he/: komodo.po
po/ia/: komodo.po
po/it/: komodo.po
po/ka/: komodo.po
po/ko/: komodo.po
po/lt/: komodo.po
po/nl/: komodo.po
po/pt_BR/: komodo.po
po/sk/: komodo.po
po/sl/: komodo.po
po/sv/: komodo.po
po/tr/: komodo.po
po/ug/: komodo.po
po/uk/: komodo.po
po/zh_CN/: komodo.po
po/zh_TW/: komodo.po
src/: CMakeLists.txt  Main.qml  Todo.cpp  Todo.h  TodoModel.cpp  TodoModel.h  TodoPage.qml  TodoParser.cpp  TodoParser.h  komodo_config.kcfg  main.cpp
src/autotests/: CMakeLists.txt  todo.txt  todomodel_test.cpp
src/models/: CMakeLists.txt  Todo.cpp  Todo.h  TodoFilterProxyModel.qml  TodoModel.cpp  TodoModel.h  komodo_config.kcfg
src/plasmoid/: CMakeLists.txt  CompactRepresentation.qml  FullRepresentation.qml  config.qml  configGeneral.qml  komodowidgetplugin.cpp  komodowidgetplugin.h  main.qml  main.xml  metadata.json  metadata.json.license
src/ui/: CMakeLists.txt  KomoDoHelp.qml  TodoDelegate.qml  TodoListView.qml  TodoPage.qml
